--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.15",
-    "@mui/material": "^5.14.15",
+    "@mui/lab": "^5.0.0-alpha.151",
+    "@mui/material": "^5.14.16",
     "apexcharts": "^3.44.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-swipeable-views": "^0.14.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
