--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "apexcharts": "^3.44.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
-    "react-dom": "^18.2.0",
-    "react-swipeable-views": "^0.14.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
